# krr-mcp

./: .bandit  .coveragerc  .dockerignore  .env.docker  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  PLANNING.md  PRD.md  README.md  TASKS.md  docker-compose.yml  krr-cli-help.md  main.py  pyproject.toml  test-results.xml
.github/workflows/: ci-cd.yml  dependencies.yml  quality-gates.yml  security.yml  test-coverage.yml
docs/: deployment.md  installation.md  safety.md  troubleshooting.md  user-guide.md
docs/api/: README.md  api-documentation.json  api-reference.md  openapi.json  safety-guide.md  usage-examples.md
scripts/: build.py  run_tests.py  setup-dev.py
src/: __init__.py  server.py
src/documentation/: __init__.py  tool_doc_generator.py
src/executor/: __init__.py  kubectl_executor.py  models.py  post_execution_validator.py
src/recommender/: __init__.py  krr_client.py  models.py
src/safety/: __init__.py  confirmation_manager.py  models.py  validator.py
src/versioning/: __init__.py  tool_versioning.py
test-reports/: benchmark.json  safety-coverage.xml
tests/: README.md  __init__.py  cluster_manager.py  conftest.py  conftest_cluster.py  kind-config.yaml  test-workloads.yaml  test_chaos.py  test_chaos_original.py  test_coverage_analysis.py  test_documentation_generator.py  test_health_check.py  test_integration_cluster.py  test_integration_cluster.py.bak  test_integration_workflows.py  test_krr_client.py  test_krr_client_coverage.py  test_krr_integration.py  test_kubectl_executor.py  test_mcp_tools.py  test_performance.py  test_post_execution_validation.py  test_safety_confirmation_manager.py  test_safety_models.py  test_safety_validator.py  test_server.py  test_server_coverage_direct.py  test_server_mcp_tools.py  test_staged_rollout.py  test_tool_versioning.py
